--- a/assignment1/appsettings.json
+++ b/assignment1/appsettings.json
@@ -5,5 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost,1433;Database=YourDatabaseName;User Id=your_username;Password=your_password;"
 }
