--- a/BAD_MA2_Solution_grp14/appsettings.json
+++ b/BAD_MA2_Solution_grp14/appsettings.json
@@ -1,6 +1,6 @@
 {
 	"ConnectionStrings": {
-		"DefaultConnection": "Server=localhost;Database=BadBoysDatabase;User Id=sa;Password=YourStrongPassword1!;TrustServerCertificate=True;"
+		"DefaultConnection": "Server=localhost,1433;Database=BadBoysDB;User Id=sa;Password=YourPassword123!;TrustServerCertificate=True;"
 	},
 	"Logging": {
 		"LogLevel": {
