--- a/BAD_MA3_Solution_grp14/appsettings.json
+++ b/BAD_MA3_Solution_grp14/appsettings.json
@@ -8,5 +8,29 @@
 			"Microsoft.AspNetCore": "Warning"
 		}
 	},
-	"AllowedHosts": "*"
+	"AllowedHosts": "*",
+
+	"Serilog": {
+		"Using": ["Serilog.Sinks.MongoDB"],
+		"MinimumLevel": {
+			"Default": "Information",
+			"Override": {
+				"Microsoft": "Warning",
+				"System": "Warning"
+			}
+		},
+		"WriteTo": [
+			{
+				"Name": "MongoDB",
+				"Args": {
+					"databaseUrl": "mongodb://mongodb:27017/BadBoysDb",
+					"collectionName": "Logs"
+				}
+			}
+		],
+		"Enrich": ["FromLogContext", "WithMachineName", "WithThreadId"],
+		"Properties": {
+			"Application": "BadBoysAPI"
+		}
+	}
 }
