adds: Authentication and roles for endpoints as specified in the part a

--- a/BAD_MA3_Solution_grp14/appsettings.json
+++ b/BAD_MA3_Solution_grp14/appsettings.json
@@ -2,6 +2,11 @@
 	"ConnectionStrings": {
 		"DefaultConnection": "Server=localhost,1433;Database=BadBoysDB;User Id=sa;Password=YourPassword123!;TrustServerCertificate=True;"
 	},
+	"Jwt": {
+		"Key": "YourSuperSecretKey123!@#$%^&*()_LONGKEY1234",
+		"Issuer": "BadBoysAPI",
+		"Audience": "BadBoysAPI"
+	},
 	"Logging": {
 		"LogLevel": {
 			"Default": "Information",
