problem with api

--- a/BAD_MA3_Solution_grp14/appsettings.json
+++ b/BAD_MA3_Solution_grp14/appsettings.json
@@ -1,6 +1,7 @@
 {
 	"ConnectionStrings": {
-		"DefaultConnection": "Server=localhost,1433;Database=BadBoysDB;User Id=sa;Password=YourPassword123!;TrustServerCertificate=True;"
+		"DefaultConnection": "Server=sqlserver-1,1433;Database=BadBoysDB;User Id=sa;Password=YourPassword123!;TrustServerCertificate=True;",
+		"MongoDB": "mongodb://mongodb-1:27017"
 	},
 	"Jwt": {
 		"Key": "YourSuperSecretKey123!@#$%^&*()_LONGKEY1234",
@@ -28,7 +29,7 @@
 			{
 				"Name": "MongoDB",
 				"Args": {
-					"databaseUrl": "mongodb://mongodb:27017/BadBoysDb",
+					"databaseUrl": "mongodb://mongodb-1:27017/BadBoysDb",
 					"collectionName": "Logs"
 				}
 			}
