Add mongo connectionsstring

--- a/BAD_MA3_Solution_grp14/appsettings.json
+++ b/BAD_MA3_Solution_grp14/appsettings.json
@@ -1,6 +1,7 @@
 {
 	"ConnectionStrings": {
-		"DefaultConnection": "Server=localhost,1433;Database=BadBoysDB;User Id=sa;Password=YourPassword123!;TrustServerCertificate=True;"
+		"DefaultConnection": "Server=localhost,1433;Database=BadBoysDB;User Id=sa;Password=YourPassword123!;TrustServerCertificate=True;",
+		"MongoDb": "mongodb://mongodb:27017/BadBoysDb"
 	},
 	"Jwt": {
 		"Key": "YourSuperSecretKey123!@#$%^&*()_LONGKEY1234",
